--- a/Disc.html
+++ b/Disc.html
@@ -3,7 +3,144 @@
 <head>
     <meta charset="UTF-8">
     <title>Дискография - Папин Олимпос</title>
-    <style>
+    <style> 
+        /* Базовые стили */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f4f4f4;
+        }
+
+        /* Шапка и навигация */
+        header {
+            background-color: #380577;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        nav {
+            margin: 1rem 0;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            padding: 5px 10px;
+        }
+
+        nav a:hover {
+            background-color: #4CAF50;
+            border-radius: 3px;
+        }
+
+        /* Основной контент */
+        main {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        h1, h2, h3 {
+            color: #380577;
+            margin-bottom: 15px;
+        }
+
+        .centered {
+            text-align: center;
+        }
+
+        .justified {
+            text-align: justify;
+        }
+
+        /* Таблицы */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+
+        table, th, td {
+            border: 2px solid #380577;
+        }
+
+        th, td {
+            padding: 12px;
+            text-align: center;
+        }
+
+        th {
+            background-color: #380577;
+            color: white;
+        }
+
+        /* Изображения */
+        .responsive-img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 20px auto;
+        }
+
+        /* Списки */
+        ul, ol {
+            margin-left: 20px;
+            margin-bottom: 15px;
+        }
+
+        li {
+            margin-bottom: 8px;
+        }
+
+        /* Подвал */
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 20px;
+        }
+
+        /* Специальные классы */
+        .green-line {
+            border: 1px solid green;
+            width: 50%;
+            margin: 20px auto;
+        }
+
+        .copyright {
+            font-size: 0.8em;
+            color: #ccc;
+        }
+
+        /* Стили для внутренних ссылок */
+        .content-links {
+            background-color: #f0f0f0;
+            padding: 15px;
+            border-radius: 5px;
+            margin: 15px 0;
+        }
+
+        .content-links a {
+            color: #380577;
+            text-decoration: none;
+        }
+
+        .content-links a:hover {
+            text-decoration: underline;
+        }
+    </style>
         .discography-table {
             margin: 30px 0;
         }
@@ -112,3 +249,4 @@
     </footer>
 </body>
 </html>
+
