--- a/Info.html
+++ b/Info.html
@@ -166,7 +166,7 @@
         <h2>Состав группы:</h2>
         <div class="member-grid">
             <div class="member-card">
-                <img src="https://avatars.mds.yandex.net/get-yapic/36689/9o1Y8FP0ldbyeaMJglJfZiDLNw-1/orig" alt="Давид Сайфуллоев" class="member-img">
+                <img src="https://i.pinimg.com/474x/a2/0f/a2/a20fa206d42bfa779d24671dff02692a.jpg?nii=t" alt="Давид Сайфуллоев" class="member-img">
                 <h3>Давид Сайфуллоев</h3>
                 <p>Вокал</p>
             </div>
@@ -206,6 +206,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
