--- a/Info.html
+++ b/Info.html
@@ -172,13 +172,13 @@
             </div>
             
             <div class="member-card">
-                <img src="https://via.placeholder.com/100" alt="Даниил Сущенко" class="member-img">
+                <img src="https://vpravda.ru/sites/default/files/content/images/2019-10-08-22-49-51-0_02100400.jpg" alt="Даниил Сущенко" class="member-img">
                 <h3>Даниил Сущенко</h3>
                 <p>Ударные</p>
             </div>
             
             <div class="member-card">
-                <img src="https://via.placeholder.com/100" alt="Андрей Густей" class="member-img">
+                <img src="" alt="Андрей Густей" class="member-img">
                 <h3>Андрей Густей</h3>
                 <p>Гитара</p>
             </div>
@@ -206,6 +206,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
