--- a/Info.html
+++ b/Info.html
@@ -178,7 +178,7 @@
             </div>
             
             <div class="member-card">
-                <img src="" alt="Андрей Густей" class="member-img">
+                <img src="https://i.pinimg.com/736x/8b/4b/fd/8b4bfd289c0b3bece9fe06facf65b71b.jpg" alt="Андрей Густей" class="member-img">
                 <h3>Андрей Густей</h3>
                 <p>Гитара</p>
             </div>
@@ -206,6 +206,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
