--- a/Info.html
+++ b/Info.html
@@ -184,7 +184,7 @@
             </div>
             
             <div class="member-card">
-                <img src="https://via.placeholder.com/100" alt="Илья Щёголев" class="member-img">
+                <img src="https://avatars.mds.yandex.net/i?id=1a1c2e6c43f133c9d8070932f0452df0_l-5268770-images-thumbs&n=13" alt="Илья Щёголев" class="member-img">
                 <h3>Илья Щёголев</h3>
                 <p>Бас-гитара</p>
             </div>
@@ -206,6 +206,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
