--- a/Info.html
+++ b/Info.html
@@ -176,7 +176,51 @@
                 <h3>Даниил Сущенко</h3>
                 <p>Ударные</p>
             </div>
-            
+            <style>
+.member-grid {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+.member-card {
+    text-align: center;
+    max-width: 200px;
+    margin: 10px;
+}
+
+.member-img-container {
+    width: 150px;
+    height: 150px;
+    margin: 0 auto 15px;
+    border: 3px solid #333;
+    border-radius: 8px;
+    padding: 4px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    overflow: hidden;
+    background-color: white;
+}
+
+.member-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-radius: 4px;
+}
+
+.member-card h3 {
+    margin: 10px 0 5px;
+    font-size: 18px;
+    color: #333;
+}
+
+.member-card p {
+    margin: 0;
+    font-size: 14px;
+    color: #666;
+}
+            </style>
             <div class="member-card">
                 <img src="https://i.pinimg.com/736x/8b/4b/fd/8b4bfd289c0b3bece9fe06facf65b71b.jpg" alt="Андрей Густей" class="member-img">
                 <h3>Андрей Густей</h3>
@@ -206,6 +250,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
