--- a/Info.html
+++ b/Info.html
@@ -166,7 +166,7 @@
         <h2>Состав группы:</h2>
         <div class="member-grid">
             <div class="member-card">
-                <img src="https://i.pinimg.com/474x/a2/0f/a2/a20fa206d42bfa779d24671dff02692a.jpg?nii=t" alt="Давид Сайфуллоев" class="member-img">
+                <img src="https://i.pinimg.com/736x/8b/4b/fd/8b4bfd289c0b3bece9fe06facf65b71b.jpg" alt="Давид Сайфуллоев" class="member-img">
                 <h3>Давид Сайфуллоев</h3>
                 <p>Вокал</p>
             </div>
@@ -250,6 +250,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
